--- a/Milvus/milvus_hello_word.ipynb
+++ b/Milvus/milvus_hello_word.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "4e3d22ea",
+   "metadata": {},
+   "source": [
+    "# Connect to Milvus"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "2947ace6-3200-4171-bb05-4bf7e5c9436e",
