--- a/Milvus/partitions_example.ipynb
+++ b/Milvus/partitions_example.ipynb
@@ -2,35 +2,27 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "8601fec6",
+   "id": "8edfe168",
    "metadata": {},
    "source": [
-    "# Collections"
+    "# Partition Example"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "b330cddb",
+   "id": "e60dcb39",
    "metadata": {},
    "source": [
-    "In Milvus, collections and fields are analogous to tables and columns in a relational database.\n",
+    "A Milvus collection can have one or more partitions and the partition within a collection can have one or more segments.\n",
     "\n",
-    "A milvus collection has one or more partitions, and the data is stored as segments inside the partitions.\n",
-    "\n",
-    "Every Milvus collection must have a name and a collection schema."
+    "A segment in a partition can be sealed or keep growing. A segment is sealed if it reaches a predetermined limit, which can be based on storage size or based on number of entities in the segment. When a segment is sealed, a new segment is created, and the new segment grows until it reaches the limits and so on."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "bf1fae07-5627-445c-8561-b7f803331e90",
-   "metadata": {
-    "editable": true,
-    "slideshow": {
-     "slide_type": ""
-    },
-    "tags": []
-   },
+   "id": "6ba50fb4-55e9-4f13-bb28-b7dd4948c8c1",
+   "metadata": {},
    "outputs": [],
    "source": [
     "from pymilvus import Collection, FieldSchema, CollectionSchema, DataType, connections, utility"
@@ -38,8 +30,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "5166e050-e7f2-46a3-ba45-cee8d0f3b59f",
+   "execution_count": 2,
+   "id": "acc1be6e-2483-4b13-9aeb-3f3722b0ac27",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,10 +44,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "a5e2b183-f8b8-4d57-8b23-40166a746478",
+   "execution_count": 3,
+   "id": "f2dabc3b-24e1-4a21-89c9-225f98928853",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Album1']"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "## Field Schema\n",
     "\n",
@@ -76,50 +79,15 @@
     "song_vec = FieldSchema(\n",
     "  name=\"song_vec\",\n",
     "  dtype=DataType.FLOAT_VECTOR,\n",
-    "  dim=64\n",
+    "  dim=2\n",
     ")\n",
-    "song_json = FieldSchema(\n",
-    "  name=\"song_json\",\n",
-    "  dtype=DataType.JSON\n",
-    ")\n",
-    "song_array = FieldSchema(\n",
-    "  name='song_array', dtype=DataType.ARRAY,\n",
-    "  element_type=DataType.INT64,\n",
-    "  max_capacity=900)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "id": "7c623229-1321-42d7-8c8b-02fff3779861",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "\n",
     "# Collection schema\n",
     "collection_schema = CollectionSchema(\n",
-    "  fields=[song_name, song_id, listen_count, song_vec, song_json, song_array],\n",
+    "  fields=[song_name, song_id, listen_count, song_vec],\n",
     "  description=\"Album Songs\"\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "id": "4e688c6d-ef72-4c50-a102-8ee0ff982851",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['Album1']"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
+    ")\n",
+    "\n",
     "# Create collection\n",
     "\n",
     "collection = Collection(\n",
@@ -131,76 +99,79 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "89bfcf2a-0d11-4580-a5f8-7b926c22ad44",
+   "execution_count": 4,
+   "id": "8e47f70d-3aea-4f40-878f-fd2a3503004e",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['Album2']"
+       "True"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Rename collection\n",
-    "utility.rename_collection(\"Album1\", \"Album2\")\n",
-    "utility.list_collections()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "id": "a0a86dfc-2a38-418c-bee7-dfbf36a736ca",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[]"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# Drop a collection\n",
+    "# Create a partition\n",
     "\n",
-    "utility.drop_collection(\"Album2\")\n",
-    "utility.list_collections()"
+    "collection.create_partition(\"Disc1\")\n",
+    "collection.has_partition(\"Disc1\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "05a28722-6967-4858-8c1c-ec004c469cd0",
+   "execution_count": 5,
+   "id": "cfbd9b2b-571d-40d4-9bab-73a3ad0eec73",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[]"
+       "True"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "utility.list_collections()"
+    "# Create another partition\n",
+    "collection.create_partition(\"Disc2\")\n",
+    "collection.has_partition(\"Disc2\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "c9652802-cd3c-459a-9028-629dd6f6950f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Drop a a partition\n",
+    "\n",
+    "collection.drop_partition(\"Disc2\")\n",
+    "collection.has_partition(\"Disc2\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "614caa53-dee7-457f-9c04-f5c2f4900e4d",
+   "id": "510bdbd2-7eab-4f61-b4f5-eb10d6ea4bb1",
    "metadata": {},
    "outputs": [],
    "source": []
