--- a/Milvus/2-collections_fixed_schema.ipynb
+++ b/Milvus/2-collections_fixed_schema.ipynb
@@ -177,6 +177,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "1c1f8b26",
+   "metadata": {},
+   "source": [
+    "In Milvus, the inserted data in segments will be automatically compacted by default.\n",
+    "\n",
+    "Compaction is the process of merging small segments into larger ones and clean up logically deleted data from the segments.\n",
+    "\n",
+    "We can also compact the data manually using the compact method which is available in the collection object."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 11,
    "id": "05a28722-6967-4858-8c1c-ec004c469cd0",
