--- a/Milvus/4-data_management.ipynb
+++ b/Milvus/4-data_management.ipynb
@@ -1,8 +1,16 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "3fe72754",
+   "metadata": {},
+   "source": [
+    "# Data Management"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 17,
    "id": "fb647c9c-7849-4ff1-8ce2-6aba47afde1a",
    "metadata": {},
    "outputs": [],
@@ -14,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 18,
    "id": "a9f8d975-dc20-4ae2-b945-53ee0d294abd",
    "metadata": {},
    "outputs": [],
@@ -28,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 19,
    "id": "19079271-dd9e-45d5-a58a-6bad2857b40d",
    "metadata": {},
    "outputs": [
@@ -38,7 +46,7 @@
        "['Album1']"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -50,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 20,
    "id": "0cb4c76e",
    "metadata": {},
    "outputs": [
@@ -98,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 21,
    "id": "55c95c95-4505-4dbc-8feb-88110a07d32c",
    "metadata": {},
    "outputs": [],
@@ -115,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 22,
    "id": "767ae57b",
    "metadata": {},
    "outputs": [
@@ -123,10 +131,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['CBKUKBL', 'YDRFWLW', 'RTDAGVD', 'CPZEIXS', 'DORAFEZ']\n",
+      "['IGKXDNX', 'SMJKEFI', 'WNVBFQR', 'JARQJZL', 'KBYALSJ']\n",
       "[0, 1, 2, 3, 4]\n",
-      "[2385, 84996, 98962, 43099, 94064]\n",
-      "[[0.656659900015113, 0.6223204184629147], [0.40849532433301583, 0.9283011256462833], [0.14956469838214104, 0.5246794900785718], [0.8044191101591377, 0.3776874660862892], [0.17611237744929387, 0.7115669198330138]]\n"
+      "[99007, 87226, 95049, 5383, 51958]\n",
+      "[[0.07871737702905701, 0.3911535816387862], [0.4033997734579645, 0.8501319380217226], [0.3549359477712536, 0.16615084588434503], [0.41174030348595825, 0.057591916497555795], [0.5608121683035846, 0.661511356737895]]\n"
      ]
     }
    ],
@@ -137,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 23,
    "id": "a023e521-e63c-41bf-a55f-f700aa38ef6a",
    "metadata": {},
    "outputs": [],
@@ -147,8 +155,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "a2cbeef8",
+   "metadata": {},
+   "source": [
+    "Milvus supports deleting entities by primary key filtered with boolean expression."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 24,
    "id": "67ac2e72-48a4-4cf8-9c8f-1ed7bf96c26a",
    "metadata": {},
    "outputs": [
@@ -158,7 +174,7 @@
        "(insert count: 0, delete count: 2, upsert count: 0, timestamp: 0, success count: 0, err count: 0)"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -172,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 25,
    "id": "aae834bc-6807-4358-97d2-8d9cfabaf28c",
    "metadata": {},
    "outputs": [],
@@ -184,7 +200,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "aaa514b6-1ba9-48a6-9154-1f9e1be18ee3",
+   "id": "f4bd5c93",
    "metadata": {},
    "outputs": [],
    "source": []
