--- a/Milvus/5-indexes.ipynb
+++ b/Milvus/5-indexes.ipynb
@@ -1,8 +1,32 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "57a48eda",
+   "metadata": {},
+   "source": [
+    "# Indexes"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2d65abbe",
+   "metadata": {},
+   "source": [
+    "Vector indexes are an organizational unit of metadata used to accelerate vector similarity search. Without index built on vectors, Milvus will perform a brute-force search by default."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "150c34e4",
+   "metadata": {},
+   "source": [
+    "Milvus supports indexing, and we can build indexes on both vector and scalar fields."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "id": "3d91f790-295b-4016-b7f2-f01a7f2b1f90",
    "metadata": {},
    "outputs": [],
@@ -12,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "id": "fc932531-9608-4540-8996-2b5a03a2ebca",
    "metadata": {},
    "outputs": [],
@@ -26,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "id": "8945146f-2c89-4f9c-80c2-d99a3be27042",
    "metadata": {},
    "outputs": [
@@ -36,7 +60,7 @@
        "['Album1']"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -47,8 +71,96 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "52c8c39d",
+   "metadata": {},
+   "source": [
+    "To build a vector index, we have to specify one of the similarity metric type, the index type, and the necessary parameters for that particular index type. Along with this, we will have to specify the vector field on which the indexes are built."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "385a17eb",
+   "metadata": {},
+   "source": [
+    "For floating point vectors, we can use Euclidean distance, Cosine distance and inner product.\n",
+    "\n",
+    "**Metric Types**\t\n",
+    "* Euclidean distance (L2)\n",
+    "* Inner product (IP)\n",
+    "* Cosine similarity (COSINE)\t\n",
+    "\n",
+    "**Index Types**\n",
+    "* FLAT\n",
+    "* IVF_FLAT\n",
+    "* IVF_SQ8\n",
+    "* IVF_PQ\n",
+    "* GPU_IVF_FLAT\n",
+    "* GPU_IVF_PQ\n",
+    "* HNSW\n",
+    "* DISKANN"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "608fa2f7",
+   "metadata": {},
+   "source": [
+    "For binary vectors, we can use Jaccard distance and Hamming distance.\n",
+    "\n",
+    "**Metric Types**\n",
+    "* Jaccard (JACCARD)\n",
+    "* Hamming (HAMMING)\n",
+    "\n",
+    "**Index Types**\n",
+    "* BIN_FLAT\n",
+    "* BIN_IVF_FLAT"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fbebcda9",
+   "metadata": {},
+   "source": [
+    "For sparse embeddings;\n",
+    "\n",
+    "**Metric Types**\n",
+    "* IP\t\n",
+    "\n",
+    "**Index Types**\n",
+    "* SPARSE_INVERTED_INDEX\n",
+    "* SPARSE_WAND"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4db05a11",
+   "metadata": {},
+   "source": [
+    "Similarity Metrics: https://milvus.io/docs/metric.md#sparse\n",
+    "\n",
+    "In-memory Index: https://milvus.io/docs/index.md"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ad963302",
+   "metadata": {},
+   "source": [
+    "It is recommended to create indexes for both the vector field and scalar fields that are frequently accessed."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2e4b749a",
+   "metadata": {},
+   "source": [
+    "These metrics are used to compare the vectors and find how much they are similar to each other."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "id": "9c2bcecd-ccc6-4fa0-a4ad-9e0eb888e71d",
    "metadata": {},
    "outputs": [
@@ -58,7 +170,7 @@
        "Status(code=0, message=)"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -78,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "id": "88da8cb1-667b-4333-895a-7cda7bf7c188",
    "metadata": {},
    "outputs": [
@@ -95,8 +207,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "8c8661ce",
+   "metadata": {},
+   "source": [
+    "We can also build an index on scalar fields, and while building an index on scalar fields, we are not required to specify any index parameters by default. Milvus can decide the index type depending on the data type of that particular scalar field."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "id": "7374f15a-60cb-493f-89d0-ce9e09d30361",
    "metadata": {},
    "outputs": [
@@ -106,7 +226,7 @@
        "Status(code=0, message=)"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -123,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "3d4bb7de-f2fd-4494-888c-4d1eaeb3957f",
    "metadata": {},
    "outputs": [],
@@ -157,7 +277,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.2"
+   "version": "3.9.13"
   }
  },
  "nbformat": 4,
