--- a/Milvus/09-tf_example.ipynb
+++ b/Milvus/09-tf_example.ipynb
@@ -42,6 +42,49 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Requirement already satisfied: tensorflow in d:\\study\\vector databases\\milvus\\.venv\\lib\\site-packages (2.16.1)\n",
+      "Requirement already satisfied: tensorflow-hub in d:\\study\\vector databases\\milvus\\.venv\\lib\\site-packages (0.16.1)\n",
+      "Requirement already satisfied: tensorflow-intel==2.16.1 in d:\\study\\vector databases\\milvus\\.venv\\lib\\site-packages (from tensorflow) (2.16.1)\n",
+      "Requirement already satisfied: absl-py>=1.0.0 in d:\\study\\vector databases\\milvus\\.venv\\lib\\site-packages (from tensorflow-intel==2.16.1->tensorflow) (2.1.0)\n",
+      "Requirement already satisfied: astunparse>=1.6.0 in d:\\study\\vector databases\\milvus\\.venv\\lib\\site-packages (from tensorflow-intel==2.16.1->tensorflow) (1.6.3)\n",
+      "Requirement already satisfied: flatbuffers>=23.5.26 in d:\\study\\vector databases\\milvus\\.venv\\lib\\site-packages (from tensorflow-intel==2.16.1->tensorflow) (24.3.25)\n",
+      "Requirement already satisfied: gast!=0.5.0,!=0.5.1,!=0.5.2,>=0.2.1 in d:\\study\\vector databases\\milvus\\.venv\\lib\\site-packages (from tensorflow-intel==2.16.1->tensorflow) (0.5.4)\n",
+      "Requirement already satisfied: google-pasta>=0.1.1 in d:\\study\\vector databases\\milvus\\.venv\\lib\\site-packages (from tensorflow-intel==2.16.1->tensorflow) (0.2.0)\n",
+      "Requirement already satisfied: h5py>=3.10.0 in d:\\study\\vector databases\\milvus\\.venv\\lib\\site-packages (from tensorflow-intel==2.16.1->tensorflow) (3.11.0)\n",
+      "Requirement already satisfied: libclang>=13.0.0 in d:\\study\\vector databases\\milvus\\.venv\\lib\\site-packages (from tensorflow-intel==2.16.1->tensorflow) (18.1.1)\n",
+      "Requirement already satisfied: ml-dtypes~=0.3.1 in d:\\study\\vector databases\\milvus\\.venv\\lib\\site-packages (from tensorflow-intel==2.16.1->tensorflow) (0.3.2)\n",
+      "Requirement already satisfied: opt-einsum>=2.3.2 in d:\\study\\vector databases\\milvus\\.venv\\lib\\site-packages (from tensorflow-intel==2.16.1->tensorflow) (3.3.0)\n",
+      "Requirement already satisfied: packaging in d:\\study\\vector databases\\milvus\\.venv\\lib\\site-packages (from tensorflow-intel==2.16.1->tensorflow) (24.1)\n",
+      "Requirement already satisfied: protobuf!=4.21.0,!=4.21.1,!=4.21.2,!=4.21.3,!=4.21.4,!=4.21.5,<5.0.0dev,>=3.20.3 in d:\\study\\vector databases\\milvus\\.venv\\lib\\site-packages (from tensorflow-intel==2.16.1->tensorflow) (4.25.3)\n",
+      "Requirement already satisfied: requests<3,>=2.21.0 in d:\\study\\vector databases\\milvus\\.venv\\lib\\site-packages (from tensorflow-intel==2.16.1->tensorflow) (2.32.3)\n",
+      "Requirement already satisfied: setuptools in d:\\study\\vector databases\\milvus\\.venv\\lib\\site-packages (from tensorflow-intel==2.16.1->tensorflow) (70.0.0)\n",
+      "Requirement already satisfied: six>=1.12.0 in d:\\study\\vector databases\\milvus\\.venv\\lib\\site-packages (from tensorflow-intel==2.16.1->tensorflow) (1.16.0)\n",
+      "Requirement already satisfied: termcolor>=1.1.0 in d:\\study\\vector databases\\milvus\\.venv\\lib\\site-packages (from tensorflow-intel==2.16.1->tensorflow) (2.4.0)\n",
+      "Requirement already satisfied: typing-extensions>=3.6.6 in d:\\study\\vector databases\\milvus\\.venv\\lib\\site-packages (from tensorflow-intel==2.16.1->tensorflow) (4.12.2)\n",
+      "Requirement already satisfied: wrapt>=1.11.0 in d:\\study\\vector databases\\milvus\\.venv\\lib\\site-packages (from tensorflow-intel==2.16.1->tensorflow) (1.16.0)\n",
+      "Requirement already satisfied: grpcio<2.0,>=1.24.3 in d:\\study\\vector databases\\milvus\\.venv\\lib\\site-packages (from tensorflow-intel==2.16.1->tensorflow) (1.60.0)\n",
+      "Requirement already satisfied: tensorboard<2.17,>=2.16 in d:\\study\\vector databases\\milvus\\.venv\\lib\\site-packages (from tensorflow-intel==2.16.1->tensorflow) (2.16.2)\n",
+      "Requirement already satisfied: keras>=3.0.0 in d:\\study\\vector databases\\milvus\\.venv\\lib\\site-packages (from tensorflow-intel==2.16.1->tensorflow) (3.3.3)\n",
+      "Requirement already satisfied: tensorflow-io-gcs-filesystem>=0.23.1 in d:\\study\\vector databases\\milvus\\.venv\\lib\\site-packages (from tensorflow-intel==2.16.1->tensorflow) (0.31.0)\n",
+      "Requirement already satisfied: numpy<2.0.0,>=1.23.5 in d:\\study\\vector databases\\milvus\\.venv\\lib\\site-packages (from tensorflow-intel==2.16.1->tensorflow) (1.26.4)\n",
+      "Requirement already satisfied: tf-keras>=2.14.1 in d:\\study\\vector databases\\milvus\\.venv\\lib\\site-packages (from tensorflow-hub) (2.16.0)\n",
+      "Requirement already satisfied: wheel<1.0,>=0.23.0 in d:\\study\\vector databases\\milvus\\.venv\\lib\\site-packages (from astunparse>=1.6.0->tensorflow-intel==2.16.1->tensorflow) (0.43.0)\n",
+      "Requirement already satisfied: rich in d:\\study\\vector databases\\milvus\\.venv\\lib\\site-packages (from keras>=3.0.0->tensorflow-intel==2.16.1->tensorflow) (13.7.1)\n",
+      "Requirement already satisfied: namex in d:\\study\\vector databases\\milvus\\.venv\\lib\\site-packages (from keras>=3.0.0->tensorflow-intel==2.16.1->tensorflow) (0.0.8)\n",
+      "Requirement already satisfied: optree in d:\\study\\vector databases\\milvus\\.venv\\lib\\site-packages (from keras>=3.0.0->tensorflow-intel==2.16.1->tensorflow) (0.11.0)\n",
+      "Requirement already satisfied: charset-normalizer<4,>=2 in d:\\study\\vector databases\\milvus\\.venv\\lib\\site-packages (from requests<3,>=2.21.0->tensorflow-intel==2.16.1->tensorflow) (3.3.2)\n",
+      "Requirement already satisfied: idna<4,>=2.5 in d:\\study\\vector databases\\milvus\\.venv\\lib\\site-packages (from requests<3,>=2.21.0->tensorflow-intel==2.16.1->tensorflow) (3.7)\n",
+      "Requirement already satisfied: urllib3<3,>=1.21.1 in d:\\study\\vector databases\\milvus\\.venv\\lib\\site-packages (from requests<3,>=2.21.0->tensorflow-intel==2.16.1->tensorflow) (2.2.1)\n",
+      "Requirement already satisfied: certifi>=2017.4.17 in d:\\study\\vector databases\\milvus\\.venv\\lib\\site-packages (from requests<3,>=2.21.0->tensorflow-intel==2.16.1->tensorflow) (2024.6.2)\n",
+      "Requirement already satisfied: markdown>=2.6.8 in d:\\study\\vector databases\\milvus\\.venv\\lib\\site-packages (from tensorboard<2.17,>=2.16->tensorflow-intel==2.16.1->tensorflow) (3.6)\n",
+      "Requirement already satisfied: tensorboard-data-server<0.8.0,>=0.7.0 in d:\\study\\vector databases\\milvus\\.venv\\lib\\site-packages (from tensorboard<2.17,>=2.16->tensorflow-intel==2.16.1->tensorflow) (0.7.2)\n",
+      "Requirement already satisfied: werkzeug>=1.0.1 in d:\\study\\vector databases\\milvus\\.venv\\lib\\site-packages (from tensorboard<2.17,>=2.16->tensorflow-intel==2.16.1->tensorflow) (3.0.3)\n",
+      "Requirement already satisfied: importlib-metadata>=4.4 in d:\\study\\vector databases\\milvus\\.venv\\lib\\site-packages (from markdown>=2.6.8->tensorboard<2.17,>=2.16->tensorflow-intel==2.16.1->tensorflow) (7.1.0)\n",
+      "Requirement already satisfied: MarkupSafe>=2.1.1 in d:\\study\\vector databases\\milvus\\.venv\\lib\\site-packages (from werkzeug>=1.0.1->tensorboard<2.17,>=2.16->tensorflow-intel==2.16.1->tensorflow) (2.1.5)\n",
+      "Requirement already satisfied: markdown-it-py>=2.2.0 in d:\\study\\vector databases\\milvus\\.venv\\lib\\site-packages (from rich->keras>=3.0.0->tensorflow-intel==2.16.1->tensorflow) (3.0.0)\n",
+      "Requirement already satisfied: pygments<3.0.0,>=2.13.0 in d:\\study\\vector databases\\milvus\\.venv\\lib\\site-packages (from rich->keras>=3.0.0->tensorflow-intel==2.16.1->tensorflow) (2.18.0)\n",
+      "Requirement already satisfied: zipp>=0.5 in d:\\study\\vector databases\\milvus\\.venv\\lib\\site-packages (from importlib-metadata>=4.4->markdown>=2.6.8->tensorboard<2.17,>=2.16->tensorflow-intel==2.16.1->tensorflow) (3.19.2)\n",
+      "Requirement already satisfied: mdurl~=0.1 in d:\\study\\vector databases\\milvus\\.venv\\lib\\site-packages (from markdown-it-py>=2.2.0->rich->keras>=3.0.0->tensorflow-intel==2.16.1->tensorflow) (0.1.2)\n",
       "WARNING:tensorflow:From d:\\Study\\Vector Databases\\Milvus\\.venv\\lib\\site-packages\\tf_keras\\src\\losses.py:2976: The name tf.losses.sparse_softmax_cross_entropy is deprecated. Please use tf.compat.v1.losses.sparse_softmax_cross_entropy instead.\n",
       "\n"
      ]
@@ -125,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "40facc29-5027-4f5d-8689-7c3960e685a5",
    "metadata": {},
    "outputs": [],
@@ -137,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "id": "774acf80-65b5-486a-9bbb-d3b4660fddf7",
    "metadata": {},
    "outputs": [],
@@ -158,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "id": "69b5e55d-8255-4515-9bd1-3695e9eeb1bb",
    "metadata": {},
    "outputs": [],
@@ -173,17 +216,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 12,
    "id": "e76e8565-d601-4b8c-9508-eabd99561718",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['dynamic_schema_example', 'Spam_Test', 'Album1', 'partition_key_collection']"
+       "['Album1', 'dynamic_schema_example', 'partition_key_collection', 'Spam_Test']"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -220,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 13,
    "id": "0e1a5937-79fc-4df3-a7d1-a6e5e1c3a781",
    "metadata": {},
    "outputs": [],
@@ -231,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 14,
    "id": "47838f7e-e751-4788-866d-c26a5b65d5df",
    "metadata": {},
    "outputs": [
@@ -241,7 +284,7 @@
        "Status(code=0, message=)"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -264,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 15,
    "id": "01df515b-57c0-4918-bfb4-babf59a031bb",
    "metadata": {},
    "outputs": [],
@@ -283,7 +326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 16,
    "id": "6f3aaf9a-feb9-4cc2-a33d-a87a7f0d43e9",
    "metadata": {},
    "outputs": [],
@@ -295,7 +338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 17,
    "id": "e8b85606-69de-4990-83cb-277e085025c5",
    "metadata": {},
    "outputs": [
@@ -330,8 +373,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "a83f281c-b7c7-4e72-9a49-bbf95edee0c6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Save this vector to use later\n",
+    "with open(\"test_message_vector.txt\", \"w\") as file:\n",
+    "    for item in test_message_vector:\n",
+    "        file.write(f\"{item}\\n\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "63667646",
    "metadata": {},
    "outputs": [],
    "source": []
